# dt_bots

dtb_quadruped/dtb_quadruped_core/: CMakeLists.txt  package.xml
dtb_quadruped/dtb_quadruped_core/src/: service_core.cpp
dtb_quadruped/dtb_quadruped_core/srv/: CoreService.srv
dtb_quadruped/dtb_quadruped_description/: CMakeLists.txt  motor_ref.txt  package.xml
dtb_quadruped/dtb_quadruped_description/config/: dtb_quadruped_control.yaml
dtb_quadruped/dtb_quadruped_description/launch/: dtb_quadruped_gazebo_visualize.launch  spawn_dtb_quadruped.launch  urdf_visualize.launch
dtb_quadruped/dtb_quadruped_description/robots/: dtb_quadruped.gazebo.xacro  dtb_quadruped.urdf.xacro
dtb_quadruped/dtb_quadruped_description/rviz_config/: urdf_visualize.rviz
dtb_quadruped/dtb_quadruped_states/: CMakeLists.txt  package.xml
dtb_quadruped/dtb_quadruped_states/include/dtb_quadruped_states/: leg_class.h
dtb_quadruped/dtb_quadruped_states/src/: basic_services.cpp
dtb_quadruped/dtb_quadruped_states/srv/: QuadrupedBasicService.srv
