<?xml version="1.0"?>
<package format="2">
  <name>dtb_quadruped_description</name>
  <version>0.0.0</version>
  <description>The dtb_quadruped_description package</description>

  <maintainer email="dhruv.tya@gmail.com">dhruvtyagi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
